RESOLVED FIXED243422
WebKitTestRunner shouldn't disable BackgroundShouldExtendBeyondPage setting
https://bugs.webkit.org/show_bug.cgi?id=243422
Summary WebKitTestRunner shouldn't disable BackgroundShouldExtendBeyondPage setting
Fujii Hironori
Reported 2022-08-01 13:34:39 PDT
WebKitTestRunner shouldn't disable BackgroundShouldExtendBeyondPage setting WebKitTestRunner is running with disabling BackgroundShouldExtendBeyondPage setting. This hides some test failures which Safari has. > // This setting differs between the antique and modern Mac WebKit2 API. > // For now, maintain the antique behavior, because some tests depend on it! > // FIXME: We should be testing the default. > WKPageSetBackgroundExtendsBeyondPage(m_mainWebView->page(), false); https://github.com/WebKit/WebKit/blob/dcbfd8929b1dcdf5c9393c0906f5fd198344c67c/Tools/WebKitTestRunner/TestController.cpp#L1024-L1027 This was added by 166462@main (bug#143743).
Attachments
WIP patch (75.02 KB, patch)
2022-08-01 13:55 PDT, Fujii Hironori
no flags
Patch (113.88 KB, patch)
2022-08-01 22:26 PDT, Fujii Hironori
ews-feeder: commit-queue-
WIP patch (124.95 KB, patch)
2022-08-02 16:47 PDT, Fujii Hironori
no flags
Patch (151.45 KB, patch)
2022-08-03 05:32 PDT, Fujii Hironori
no flags
Patch (154.89 KB, patch)
2022-08-03 14:14 PDT, Fujii Hironori
no flags
[fast-cq] Patch for landing (2.11 KB, patch)
2022-08-05 05:26 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-08-01 13:45:55 PDT
If I remove the code, the following tests will fail. css3/blending/blend-mode-html-element-screen.html [ ImageOnlyFailure ] fast/borders/border-radius-on-html.html [ ImageOnlyFailure ] Filed: Bug 243425 – css3/blending/blend-mode-html-element-screen.html ref test doesn't seem to pass Bug 243426 – fast/borders/border-radius-on-html.html ref test doesn't seem to pass
Fujii Hironori
Comment 2 2022-08-01 13:55:55 PDT
Created attachment 461341 [details] WIP patch
Fujii Hironori
Comment 3 2022-08-01 19:28:52 PDT
EWS reported more ref test failures: Regressions: Unexpected image-only failures (6) imported/w3c/web-platform-tests/css/css-contain/contain-html-bg-001.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-contain/contain-html-bg-002.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-contain/contain-html-bg-003.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-contain/contain-html-bg-004.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-masking/clip-path/clip-path-document-element-will-change.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-masking/clip-path/clip-path-document-element.html [ ImageOnlyFailure ]
Fujii Hironori
Comment 4 2022-08-01 21:32:49 PDT
Bug 243363 – Prevent background propagation on <html> with any containment Bug 243444 – WPT css/css-masking/clip-path/clip-path-document-element.html is failing
Fujii Hironori
Comment 5 2022-08-01 22:26:41 PDT
Fujii Hironori
Comment 6 2022-08-02 16:47:40 PDT
Created attachment 461365 [details] WIP patch
Fujii Hironori
Comment 7 2022-08-03 05:32:30 PDT
Fujii Hironori
Comment 8 2022-08-03 14:14:07 PDT
EWS
Comment 9 2022-08-04 14:36:01 PDT
Committed 253132@main (53740558e56f): <https://commits.webkit.org/253132@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461386 [details].
Radar WebKit Bug Importer
Comment 10 2022-08-04 14:37:18 PDT
Fujii Hironori
Comment 11 2022-08-05 05:26:46 PDT
Reopening to attach new patch.
Fujii Hironori
Comment 12 2022-08-05 05:26:49 PDT
Created attachment 461423 [details] [fast-cq] Patch for landing
EWS
Comment 13 2022-08-05 05:28:48 PDT
Committed 253144@main (a24bbbc72f7d): <https://commits.webkit.org/253144@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461423 [details].
Note You need to log in before you can comment on or make changes to this bug.