WebKitTestRunner shouldn't disable BackgroundShouldExtendBeyondPage setting https://bugs.webkit.org/show_bug.cgi?id=243422

Reviewed by Simon Fraser.

WebKitTestRunner had been disabling BackgroundShouldExtendBeyondPage
setting to align with the legacy WebKit since the beginning. It hid
some modern WebKit's test failures. It should be enabled to align with
Safari's settings.

Marked the hidden test failures as bug#243425, bug#243426 and
bug#243444. Baselined layer test expectations.

* LayoutTests/compositing/clipping/border-radius-async-overflow-clipping-layer-expected.txt:
* LayoutTests/compositing/clipping/border-radius-overflow-hidden-stacking-context-expected.txt:
* LayoutTests/compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* LayoutTests/compositing/rtl/rtl-scrolling-with-transformed-descendants-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-clipped-by-scroll-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-nested-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-for-negative-z-in-scroller-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-hidden-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-visible-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-gain-clipping-layer-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-in-clipped-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-lose-clipping-layer-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/nested-scrollers-backing-attachment-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/transform-change-scrollbar-position-expected.txt:
* LayoutTests/compositing/scrolling/async-overflow-scrolling/visibility-hidden-scrollers-expected.txt:
* LayoutTests/compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* LayoutTests/fast/scrolling/ios/change-scrollability-on-content-resize-expected.txt:
* LayoutTests/fast/scrolling/ios/change-scrollability-on-content-resize-nested-expected.txt:
* LayoutTests/fast/scrolling/ios/scrollbar-hiding-expected.txt:
* LayoutTests/fast/scrolling/ios/scrollbar-hiding-iframes-expected.txt:
* LayoutTests/fast/visual-viewport/rubberbanding-viewport-rects-expected.txt:
* LayoutTests/fast/visual-viewport/rubberbanding-viewport-rects-header-footer-expected.txt:
* LayoutTests/fast/visual-viewport/tiled-drawing/zoomed-fixed-scrolled-down-expected.txt:
* LayoutTests/fast/visual-viewport/tiled-drawing/zoomed-fixed-scrolled-down-then-up-expected.txt:
* LayoutTests/fast/visual-viewport/tiled-drawing/zoomed-fixed-scrolling-layers-state-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-clipped-by-scroll-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-nested-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-for-negative-z-in-scroller-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-hidden-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-visible-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-gain-clipping-layer-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-in-clipped-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/layer-in-overflow-lose-clipping-layer-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/nested-scrollers-backing-attachment-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/transform-change-scrollbar-position-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/visibility-hidden-scrollers-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* LayoutTests/platform/ios-wk2/fast/visual-viewport/rubberbanding-viewport-rects-expected.txt:
* LayoutTests/platform/ios-wk2/fast/visual-viewport/rubberbanding-viewport-rects-header-footer-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/absolute-in-nested-overflow-scroll-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/absolute-in-nested-sc-scrollers-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/absolute-inside-stacking-in-scroller-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/clipped-layer-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/clipped-layer-in-overflow-nested-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/composited-in-absolute-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/composited-in-absolute-in-stacking-context-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/coordinated-frame-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/coordinated-frame-gain-scrolling-ancestor-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/coordinated-frame-in-fixed-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/coordinated-frame-lose-scrolling-ancestor-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/fixed-inside-frame-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/gain-scrolling-node-parent-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/lose-scrolling-node-parent-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/nested-absolute-in-absolute-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/nested-absolute-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/nested-absolute-in-relative-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/nested-absolute-in-sc-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/nested-overflow-scroll-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/overflow-in-fixed-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/positioned-nodes-complex-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/positioned-nodes-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/remove-coordinated-frame-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/remove-scrolling-role-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/reparent-across-compositing-layers-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/reparent-with-layer-removal-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/scrolling-tree-includes-frame-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/scrolling-tree-is-z-order-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/sibling-node-order-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/sticky-in-overflow-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/sticky-in-overflow-stale-constraints-expected.txt:
* LayoutTests/platform/ios-wk2/scrollingcoordinator/scrolling-tree/toggle-coordinated-frame-scrolling-expected.txt:
* LayoutTests/platform/ios/compositing/geometry/fixed-in-composited-expected.txt:
* LayoutTests/platform/ios/compositing/rtl/rtl-scrolling-with-transformed-descendants-expected.txt:
* LayoutTests/platform/ios/scrollingcoordinator/ios/fixed-in-overflow-scroll-scrolling-tree-expected.txt:
* LayoutTests/platform/ios/scrollingcoordinator/ios/fixed-scrolling-with-keyboard-expected.txt:
* LayoutTests/platform/ios/scrollingcoordinator/ios/ui-scrolling-tree-expected.txt:
* LayoutTests/platform/ipad/fast/scrolling/ios/change-scrollability-on-content-resize-nested-expected.txt:
* LayoutTests/platform/ipad/scrollingcoordinator/ios/fixed-scrolling-with-keyboard-expected.txt:
* LayoutTests/platform/ipad/scrollingcoordinator/ios/ui-scrolling-tree-expected.txt:
* LayoutTests/platform/mac-wk1/compositing/clipping/border-radius-overflow-hidden-stacking-context-expected.txt: Copied from LayoutTests/compositing/clipping/border-radius-overflow-hidden-stacking-context-expected.txt.
* LayoutTests/platform/wk2/TestExpectations:
* LayoutTests/scrollingcoordinator/ios/fixed-scrolling-with-keyboard-expected.txt:
* LayoutTests/scrollingcoordinator/ios/ui-scrolling-tree-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-nested-non-cb-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-nested-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-nested-overflow2-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-overflow-dynamic-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-in-overflow-in-iframe-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-on-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-1-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-2-async-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-2-sync-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-3-async-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-3-sync-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-4-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-5-async-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-5-sync-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-6-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-7-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-8-async-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-8-sync-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-9-async-expected.txt:
* LayoutTests/scrollingcoordinator/mac/fixed-backgrounds/fixed-background-slow-scrolling-9-sync-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/absolute-in-nested-overflow-scroll-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/absolute-in-nested-sc-scrollers-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/absolute-inside-stacking-in-scroller-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/clipped-layer-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/clipped-layer-in-overflow-nested-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/composited-in-absolute-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/composited-in-absolute-in-stacking-context-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/coordinated-frame-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/coordinated-frame-gain-scrolling-ancestor-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/coordinated-frame-in-fixed-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/coordinated-frame-lose-scrolling-ancestor-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/fixed-inside-frame-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/gain-scrolling-node-parent-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/lose-scrolling-node-parent-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/nested-absolute-in-absolute-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/nested-absolute-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/nested-absolute-in-relative-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/nested-absolute-in-sc-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/nested-overflow-scroll-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/overflow-in-fixed-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/positioned-nodes-complex-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/positioned-nodes-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/remove-coordinated-frame-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/remove-scrolling-role-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/reparent-across-compositing-layers-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/reparent-with-layer-removal-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/scrolling-tree-includes-frame-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/scrolling-tree-is-z-order-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/sibling-node-order-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/sticky-in-overflow-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/sticky-in-overflow-stale-constraints-expected.txt:
* LayoutTests/scrollingcoordinator/scrolling-tree/toggle-coordinated-frame-scrolling-expected.txt:
* LayoutTests/tiled-drawing/scrolling/clamp-out-of-bounds-scrolls-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed-background/fixed-body-background-transformed-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/absolute-inside-fixed-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/absolute-inside-out-of-view-fixed-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/fixed-in-overflow-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/fixed-position-out-of-view-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/fixed-position-out-of-view-negative-zindex-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/four-bars-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/four-bars-with-header-and-footer-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/negative-scroll-offset-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/negative-scroll-offset-in-view-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/nested-fixed-expected.txt:
* LayoutTests/tiled-drawing/scrolling/fixed/percentage-inside-fixed-expected.txt:
* LayoutTests/tiled-drawing/scrolling/frames/frameset-frame-scrollability-expected.txt:
* LayoutTests/tiled-drawing/scrolling/frames/frameset-nested-frame-scrollability-expected.txt:
* LayoutTests/tiled-drawing/scrolling/frames/scroll-region-after-frame-layout-expected.txt:
* LayoutTests/tiled-drawing/scrolling/scrolling-tree-after-scroll-expected.txt:
* LayoutTests/tiled-drawing/scrolling/scrolling-tree-slow-scrolling-expected.txt:
* LayoutTests/tiled-drawing/scrolling/sticky/negative-scroll-offset-expected.txt:
* LayoutTests/tiled-drawing/scrolling/sticky/sticky-horizontal-expected.txt:
* LayoutTests/tiled-drawing/scrolling/sticky/sticky-vertical-expected.txt:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/253132@main